--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/lovable-uploads/logo.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>stellar-3d-canvas</title>
+    <title>Hayder Portfolio</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
-
     <meta property="og:title" content="stellar-3d-canvas" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
