--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="HayderLabidi" />
     <meta property="og:title" content="HayderLabidi" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="logo.png" />
+    <meta property="og:image" content="/public/lovable-uploads/logo.PNG" />
   </head>
 
   <body>
