--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <link rel="icon" type="image/png" href="/lovable-uploads/logo.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hayder Portfolio</title>
-    <meta name="author" content="HayderLabidi" />
-    <meta property="og:title" content="HayderLabidi" />
+    <meta name="description" content="Lovable Generated Project" />
+    <meta name="author" content="Lovable" />
+    <meta property="og:title" content="stellar-3d-canvas" />
+    <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/public/lovable-uploads/logo.PNG" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
